[ios] Fixed history/bookmarks scrim issues

- Resize on rotation.
- Disable scrolling of table when active.

Bug: 889012,889506, 889461
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I54d4f41d31a0fb3ec7e248a3cb25bb985e58cf72
Reviewed-on: https://chromium-review.googlesource.com/1249483
Commit-Queue: David Jean <djean@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595750}
Former-commit-id: 12234dec99844811341abe269be29519ebab735b